--- a/templates/ipsec.conf.j2
+++ b/templates/ipsec.conf.j2
@@ -7,8 +7,9 @@ conn %default
     dpdtimeout=300s
     rekey=no
 	keyexchange=ikev2
-    ike=aes256-sha1-modp1024!
-    esp=aes256-sha1!
+    ike=aes256gcm16-aes256gcm12-aes128gcm16-aes128gcm12-sha256-sha1-modp2048-modp4096-modp1024,aes256-aes128-sha256-sha1-modp2048-modp4096-modp1024,3des-sha1-modp1024!
+
+    esp=aes128gcm12-aes128gcm16-aes256gcm12-aes256gcm16-modp2048-modp4096-modp1024,aes128-aes256-sha1-sha256-modp2048-modp4096-modp1024,aes128-sha1-modp2048,aes128-sha1-modp1024,3des-sha1-modp1024,aes128-aes256-sha1-sha256,aes128-sha1,3des-sha1!
 	compress=yes
 	fragmentation=yes
 	
