--- a/templates/easy-rsa.vars.j2
+++ b/templates/easy-rsa.vars.j2
@@ -102,7 +102,7 @@ set_var EASYRSA_DN "cn_only"
 #  * rsa
 #  * ec
 
-set_var EASYRSA_ALGO       ec
+set_var EASYRSA_ALGO       rsa
 
 # Define the named curve, used in ec mode only:
 
