--- a/templates/mobileconfig.j2
+++ b/templates/mobileconfig.j2
@@ -45,6 +45,10 @@
                 <string>{{ item.0 }}</string>
                 <key>PayloadCertificateUUID</key>
                 <string>1FB2907D-14D3-4BAB-A472-B304F4B7F7D9</string>
+                <key>CertificateType</key>
+                <string>ECDSA256</string>
+                <key>ServerCertificateIssuerCommonName</key>
+                <string>www.ivlis.me</string>                
                 <key>RemoteAddress</key>
                 <string>{{ server_name }}</string>
                 <key>RemoteIdentifier</key>
