--- a/templates/mobileconfig.j2
+++ b/templates/mobileconfig.j2
@@ -48,7 +48,7 @@
                 <key>CertificateType</key>
                 <string>ECDSA256</string>
                 <key>ServerCertificateIssuerCommonName</key>
-                <string>www.ivlis.me</string>                
+                <string>{{ server_name }}</string>                
                 <key>RemoteAddress</key>
                 <string>{{ server_name }}</string>
                 <key>RemoteIdentifier</key>
