--- a/templates/ipsec.conf.j2
+++ b/templates/ipsec.conf.j2
@@ -22,7 +22,7 @@ conn %default
 
     right=%any
     rightauth=pubkey
-    rightsourceip=10.0.0.0/24
+    rightsourceip="{{ vpn_network }""
 {% if service_dns is defined and service_dns == "N" %}
     rightdns={% for host in dns_servers %}{{ host }}{% if not loop.last %},{% endif %}{% endfor %}
 {% else %}    
