--- a/templates/ipsec.conf.j2
+++ b/templates/ipsec.conf.j2
@@ -22,7 +22,7 @@ conn %default
 
     right=%any
     rightauth=pubkey
-    rightsourceip="{{ vpn_network }}"
+    rightsourceip={{ vpn_network }},{{ vpn_network_ipv6 }}
 {% if service_dns is defined and service_dns == "N" %}
     rightdns={% for host in dns_servers %}{{ host }}{% if not loop.last %},{% endif %}{% endfor %}
 {% else %}    
