--- a/templates/10-loopback-services.cfg.j2
+++ b/templates/10-loopback-services.cfg.j2
@@ -2,3 +2,8 @@ auto lo:100
 iface lo:100 inet static
 	address 172.16.0.1
 	netmask 255.255.255.255
+
+iface lo:100 inet6 static
+        address FCAA::1
+        netmask 64
+        autoconf 0
