--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -48,11 +48,11 @@
                 <key>CertificateType</key>
                 <string>ECDSA256</string>
                 <key>ServerCertificateIssuerCommonName</key>
-                <string>{{ ansible_ssh_host }}</string>                
+                <string>{{ IP_subject_alt_name }}</string>                
                 <key>RemoteAddress</key>
-                <string>{{ ansible_ssh_host }}</string>
+                <string>{{ IP_subject_alt_name }}</string>
                 <key>RemoteIdentifier</key>
-                <string>{{ ansible_ssh_host }}</string>
+                <string>{{ IP_subject_alt_name }}</string>
                 <key>UseConfigurationAttributeInternalIPSubnet</key>
                 <integer>0</integer>
             </dict>
@@ -81,7 +81,7 @@
                 <integer>0</integer>
             </dict>
             <key>UserDefinedName</key>
-            <string>{{ ansible_ssh_host }} IKEv2</string>
+            <string>{{ IP_subject_alt_name }} IKEv2</string>
             <key>VPNType</key>
             <string>IKEv2</string>
         </dict>
@@ -117,7 +117,7 @@
             <key>PayloadDescription</key>
             <string>Adds a CA root certificate</string>
             <key>PayloadDisplayName</key>
-            <string>{{ ansible_ssh_host }}</string>
+            <string>{{ IP_subject_alt_name }}</string>
             <key>PayloadIdentifier</key>
             <string>com.apple.security.root.32EA3AAA-D19E-43EF-B357-608218745A38</string>
             <key>PayloadType</key>
@@ -129,7 +129,7 @@
         </dict>
     </array>
     <key>PayloadDisplayName</key>
-    <string>{{ ansible_ssh_host }} IKEv2</string>
+    <string>{{ IP_subject_alt_name }} IKEv2</string>
     <key>PayloadIdentifier</key>
     <string>donut.local.37CA79B1-FC6A-421F-960A-90F91FC983BE</string>
     <key>PayloadRemovalDisallowed</key>
