adblock.sh as an unprivileged user; Store the whitelists in /var/; #64

--- a/roles/dns_adblocking/templates/usr.sbin.dnsmasq.j2
+++ b/roles/dns_adblocking/templates/usr.sbin.dnsmasq.j2
@@ -13,7 +13,8 @@
   /etc/dnsmasq.conf r,
   /etc/dnsmasq.d/ r,
   /etc/dnsmasq.d/* r,
-  /etc/block.hosts r,
+  /var/lib/dnsmasq/ r,
+  /var/lib/dnsmasq/block.hosts r,
 
   /usr/sbin/dnsmasq mr,
 
