--- a/roles/proxy/templates/ports.conf.j2
+++ b/roles/proxy/templates/ports.conf.j2
@@ -2,12 +2,12 @@
 # have to change the VirtualHost statement in
 # /etc/apache2/sites-enabled/000-default.conf
 
-Listen 172.16.0.1:8080
+Listen {{ local_service_ip }}:8080
 
 <IfModule ssl_module>
-	Listen 172.16.0.1:443
+	Listen {{ local_service_ip }}:443
 </IfModule>
 
 <IfModule mod_gnutls.c>
-	Listen 172.16.0.1:443
+	Listen {{ local_service_ip }}:443
 </IfModule>
