--- a/roles/common/templates/10-loopback-services.cfg.j2
+++ b/roles/common/templates/10-loopback-services.cfg.j2
@@ -1,6 +1,6 @@
 auto lo:100
 iface lo:100 inet static
-	address 172.16.0.1
+	address {{ local_service_ip }}
 	netmask 255.255.255.255
 
 iface lo:100 inet6 static
