run charon as non-root user #66

--- a/roles/security/templates/rules.v6.j2
+++ b/roles/security/templates/rules.v6.j2
@@ -6,7 +6,7 @@ COMMIT
 *filter
 :INPUT DROP [0:0]
 :FORWARD DROP [0:0]
-:OUTPUT DROP [0:0]
+:OUTPUT ACCEPT [0:0]
 :ICMPV6-CHECK - [0:0]
 :ICMPV6-CHECK-LOG - [0:0]
 -A INPUT -i lo -j ACCEPT
