--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -6,7 +6,51 @@
     <array>
         <dict>
             <key>IKEv2</key>
+{% if (OnDemandEnabled_WIFI is defined and OnDemandEnabled_WIFI == 'Y') or (OnDemandEnabled_Cellular is defined and OnDemandEnabled_Cellular == 'Y') %}
             <dict>
+              <key>OnDemandEnabled</key>
+                <integer>1</integer>
+              <key>OnDemandRules</key>
+              <array>
+{% if OnDemandEnabled_WIFI_ECXLUDE is defined and OnDemandEnabled_WIFI_ECXLUDE != '_null' %}
+{% set WIFI_ECXLUDE_LIST = OnDemandEnabled_WIFI_ECXLUDE.split(',') %}
+                  <dict>
+                      <key>Action</key>
+                      <string>Disconnect</string>
+                      <key>InterfaceTypeMatch</key>
+                      <string>WiFi</string>
+                      <key>SSIDMatch</key>
+                      <array>
+{% for network_name in WIFI_ECXLUDE_LIST %}
+                          <string>{{ network_name }}</string>
+{% endfor %}
+                      </array>
+                  </dict>
+{% else %}
+{% endif %}
+                  <dict>
+                    <key>Action</key>
+{% if OnDemandEnabled_WIFI is defined and OnDemandEnabled_WIFI == 'Y' %}
+                      <string>Connect</string>
+  {% else %}
+                      <string>Disconnect</string>
+{% endif %}
+                    <key>InterfaceTypeMatch</key>
+                      <string>WiFi</string>
+                  </dict>
+                  <dict>
+                    <key>Action</key>
+{% if OnDemandEnabled_Cellular is defined and OnDemandEnabled_Cellular == 'Y' %}
+                      <string>Connect</string>
+  {% else %}
+                      <string>Disconnect</string>
+{% endif %}
+                    <key>InterfaceTypeMatch</key>
+                      <string>Cellular</string>
+                  </dict>
+                </array>
+{% else %}
+{% endif %}
                 <key>AuthenticationMethod</key>
                 <string>Certificate</string>
                 <key>ChildSecurityAssociationParameters</key>
