--- a/roles/vpn/templates/rules.v4.j2
+++ b/roles/vpn/templates/rules.v4.j2
@@ -21,6 +21,9 @@ COMMIT
 # particular virtual (tun,tap,...) or physical (ethernet) interface.
 -A INPUT -d {{ local_service_ip }} -p udp --dport 53 -j ACCEPT
 -A INPUT -d {{ local_service_ip }} -p tcp -m multiport --dport 8080,8118 -j ACCEPT
+{% if BetweenClients_DROP is defined and BetweenClients_DROP == "Y" %}
+-A FORWARD -s {{ vpn_network }} -d {{ vpn_network }} -j DROP
+{% endif %}
 -A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
 -A FORWARD -p tcp --dport 445 -j DROP
 -A FORWARD -p udp -m multiport --ports 137,138 -j DROP
