--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -172,7 +172,7 @@
             <string>ca.crt</string>
             <key>PayloadContent</key>
             <data>
-            {{ PayloadContentCA.stdout }}
+            {{ PayloadContentCA }}
             </data>
             <key>PayloadDescription</key>
             <string>Adds a CA root certificate</string>
