Minor name and documentation edits

--- a/roles/security/templates/sshd_config.j2
+++ b/roles/security/templates/sshd_config.j2
@@ -9,7 +9,7 @@ SyslogFacility AUTH
 LogLevel VERBOSE
 
 # Use kernel sandbox mechanisms where possible
-# Systrace on OpenBSD, Seccomp on Linux, seatbelt on MacOSX/Darwin, rlimit elsewhere.
+# Systrace on OpenBSD, Seccomp on Linux, seatbelt on macOS X (Darwin), rlimit elsewhere.
 UsePrivilegeSeparation sandbox
 
 # Handy for keeping network connections alive
