--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -37,6 +37,8 @@
 {% endif %}
                     <key>InterfaceTypeMatch</key>
                       <string>WiFi</string>
+                    <key>URLStringProbe</key>
+                      <string>http://www.google.com</string>
                   </dict>
                   <dict>
                     <key>Action</key>
@@ -47,6 +49,8 @@
 {% endif %}
                     <key>InterfaceTypeMatch</key>
                       <string>Cellular</string>
+                    <key>URLStringProbe</key>
+                      <string>http://www.google.com</string>
                   </dict>
                 </array>
 {% else %}
