--- a/roles/proxy/templates/pagespeed.conf.j2
+++ b/roles/proxy/templates/pagespeed.conf.j2
@@ -62,7 +62,7 @@
     ModPagespeedEnableFilters lazyload_images
 
     # Explicitly disables specific filters. This is useful in
-    # conjuction with ModPagespeedRewriteLevel. For instance, if one
+    # conjunction with ModPagespeedRewriteLevel. For instance, if one
     # of the filters in the CoreFilters needs to be disabled for a
     # site, that filter can be added to
     # ModPagespeedDisableFilters. This directive contains a
@@ -71,7 +71,7 @@
     # ModPagespeedDisableFilters rewrite_images
 
     # Explicitly enables specific filters. This is useful in
-    # conjuction with ModPagespeedRewriteLevel. For instance, filters
+    # conjunction with ModPagespeedRewriteLevel. For instance, filters
     # not included in the CoreFilters may be enabled using this
     # directive. This directive contains a comma-separated list of
     # filter names, and can be repeated.
