--- a/roles/proxy/templates/pagespeed.conf.j2
+++ b/roles/proxy/templates/pagespeed.conf.j2
@@ -181,7 +181,7 @@
     # ModPagespeedRewriteRandomDropPercentage 90
 
     # Many filters modify the URLs of resources in HTML files. This is typically
-    # harmless but pages whose Javascript expects to read or modify the original
+    # harmless but pages whose JavaScript expects to read or modify the original
     # URLs may break. The following parameters prevent filters from modifying
     # URLs of their respective types.
     #
@@ -267,7 +267,7 @@
     #
     # You can uncomment this to let mod_pagespeed rename all JS files.
     #
-    # ModPagespeedAvoidRenamingIntrospectiveJavascript off
+    # ModPagespeedAvoidRenamingIntrospectiveJavaScript off
 
     # Certain common JavaScript libraries are available from Google, which acts
     # as a CDN and allows you to benefit from browser caching if a new visitor
@@ -305,7 +305,7 @@
 
 
     # Enables server-side instrumentation and statistics.  If this rewriter is
-    # enabled, then each rewritten HTML page will have instrumentation javacript
+    # enabled, then each rewritten HTML page will have instrumentation javascript
     # added that sends latency beacons to /mod_pagespeed_beacon.  These
     # statistics can be accessed at /mod_pagespeed_statistics.  You must also
     # enable the mod_pagespeed_statistics and mod_pagespeed_beacon handlers
