--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -347,7 +347,7 @@ addn-hosts=/var/lib/dnsmasq/block.hosts
 # Send DHCPv6 option. Note [] around IPv6 addresses.
 #dhcp-option=option6:dns-server,[1234::77],[1234::88]
 
-# Send DHCPv6 option for namservers as the machine running 
+# Send DHCPv6 option for nameservers as the machine running 
 # dnsmasq and another.
 #dhcp-option=option6:dns-server,[::],[1234::88]
 
