--- a/roles/proxy/templates/pagespeed.conf.j2
+++ b/roles/proxy/templates/pagespeed.conf.j2
@@ -147,7 +147,7 @@
     # ModPagespeedMaxCombinedJsBytes       92160
 
     # Limit the number of inodes in the file cache. Set to 0 for no limit.
-    # The default value if this paramater is not specified is 0 (no limit).
+    # The default value if this parameter is not specified is 0 (no limit).
     ModPagespeedFileCacheInodeLimit        500000
 
     # Bound the number of images that can be rewritten at any one time; this
