--- a/roles/cloud-ec2/templates/stack.yml.j2
+++ b/roles/cloud-ec2/templates/stack.yml.j2
@@ -164,8 +164,15 @@ Resources:
         "Fn::Base64":
           !Sub |
             #!/bin/bash -xe
-            echo "iface eth0 inet6 dhcp" >> /etc/network/interfaces.d/60-eth0-with-ipv6.cfg
-            dhclient -6 -N
+            # http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpc-migrate-ipv6.html
+            # https://bugs.launchpad.net/ubuntu/+source/ifupdown/+bug/1013597
+            cat <<EOF > /etc/network/interfaces.d/60-default-with-ipv6.cfg
+            iface eth0 inet6 dhcp
+                up sysctl net.ipv6.conf.\$IFACE.accept_ra=2
+                pre-down ip link set dev \$IFACE up
+            EOF
+            ifdown eth0; ifup eth0
+            dhclient -6
             apt-get update
             apt-get -y install python-setuptools
             easy_install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
