switch to Apple's hotspot-detect.html

--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -38,7 +38,7 @@
                     <key>InterfaceTypeMatch</key>
                       <string>WiFi</string>
                     <key>URLStringProbe</key>
-                      <string>http://www.gstatic.com/generate_204</string>
+                      <string>http://captive.apple.com/hotspot-detect.html</string>
                   </dict>
                   <dict>
                     <key>Action</key>
@@ -50,7 +50,7 @@
                     <key>InterfaceTypeMatch</key>
                       <string>Cellular</string>
                     <key>URLStringProbe</key>
-                      <string>http://www.gstatic.com/generate_204</string>
+                      <string>http://captive.apple.com/hotspot-detect.html</string>
                   </dict>
                 </array>
 {% else %}
