--- a/roles/security/templates/sshd_config.j2
+++ b/roles/security/templates/sshd_config.j2
@@ -41,9 +41,12 @@ PrintMotd no
 PrintLastLog yes
 
 # Use only modern host keys
+HostKey /etc/ssh/ssh_host_ecdsa_key
 HostKey /etc/ssh/ssh_host_ed25519_key
 
 # Use only modern ciphers
-KexAlgorithms curve25519-sha256@libssh.org
-Ciphers chacha20-poly1305@openssh.com
-MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com
+KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp256
+Ciphers chacha20-poly1305@openssh.com,aes128-gcm@openssh.com
+MACs hmac-sha2-256-etm@openssh.com
+HostKeyAlgorithms ssh-ed25519,ecdsa-sha2-nistp256
+# PubkeyAcceptedKeyTypes accept anything
