Change uniqueids back to never
We need this to allow multiple connections with the same id/certificate

--- a/roles/vpn/templates/ipsec.conf.j2
+++ b/roles/vpn/templates/ipsec.conf.j2
@@ -1,5 +1,5 @@
 config setup
-    uniqueids = replace
+    uniqueids=never # allow multiple connections per user
     charondebug="ike 2, knl 2, cfg 2, net 2, esp 2, dmn 2,  mgr 2"
 
 conn %default
