Specify EIP domain

--- a/roles/cloud-ec2/templates/stack.yml.j2
+++ b/roles/cloud-ec2/templates/stack.yml.j2
@@ -187,9 +187,11 @@ Resources:
   ElasticIP:
     Type: AWS::EC2::EIP
     Properties:
+      Domain: vpc
       InstanceId: !Ref EC2Instance
     DependsOn:
       - EC2Instance
+      - VPCGatewayAttachment
 
 Outputs:
   ElasticIP:
