Update script to restart the dnsmasq service using systemctl(systemd) command instead of service(Upstart)

--- a/roles/dns_adblocking/templates/adblock.sh.j2
+++ b/roles/dns_adblocking/templates/adblock.sh.j2
@@ -38,6 +38,8 @@ else
     cat "$TEMP_SORTED" > $DNSMASQ_BLOCKHOSTS
 fi
 
-service dnsmasq restart
+echo 'Restarting dnsmasq service...'
+#Restart the dnsmasq service
+systemctl restart dnsmasq.service
 
 exit 0
