Configure DNS names for each user
In the dns_adblocking role, assign each Algo user a domain name,
allowing connected users to communicate internally without having to
know each other's VPN IP addresses.
The user can set this in config.cfg as vpn_domain.

This required one potentially breaking change:
disallowing multiple connections from the same Algo user.

The server's ipsec.conf is also modified, with a connection per-user
that sets an IP address based on the order the user appears in the
config.cfg file.

Finally, a new /etc/hosts.ipsecclients file is created, which maps from
the IP addresses assigned in ipsec.conf to $user.$vpn_domain

--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -132,6 +132,7 @@ bind-interfaces
 # or if you want it to read another file, as well as /etc/hosts, use
 # this.
 # addn-hosts=/var/lib/dnsmasq/block.hosts
+addn-hosts=/etc/hosts.ipsecclients
 
 # Set this (and domain: see below) if you want to have a domain
 # automatically added to simple names in a hosts-file.
