--- a/roles/vpn/templates/sswan.j2
+++ b/roles/vpn/templates/sswan.j2
@@ -3,10 +3,13 @@
     "name": "Algo {{ IP_subject_alt_name }}",
     "type": "ikev2-cert",
     "remote": {
-        "addr": "{{ IP_subject_alt_name }}"
+        "addr": "{{ IP_subject_alt_name }}",
+        "cert": "{{ PayloadContentCA }}"
     },
     "local": {
         "p12": "{{ item.1.stdout }}"
     },
+    "ike-proposal": "{{ ciphers.defaults.ike | replace('!', '') }}",
+    "esp-proposal": "{{ ciphers.defaults.esp | replace('!', '') }}",
     "mtu": 1280
 }
