--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -104,7 +104,7 @@ server={{ host }}
 # If you want dnsmasq to change uid and gid to something other
 # than the default, edit the following lines.
 user=nobody
-group=nogroup
+group={{ nogroup|default('nogroup') }}
 
 # If you want dnsmasq to listen for DHCP and DNS requests only on
 # specified interfaces (and the loopback) give the name of the
